# discord-ai-agent

./: .env.example  .gitignore  .mcp.json.example  AGENTS_SUMMARY.md  CHANGELOG_v3.md  CLEANUP_SUMMARY.md  GITHUB_SETUP.md  LIBRARY.md  LICENSE  PERMISSION_UPDATE.md  PLANS.md  QUICKSTART_v3.md  README.md  REALTIME_DISPLAY.md  REFACTORING_SUMMARY.md  config.yaml  prototype_agent_loader.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  test.txt  test_agent_sdk_simple.py  test_process_display.py
.claude/: settings.local.json
agents/brainstorm-partner/: agent.yaml
agents/creative/: agent.yaml
agents/default/: agent.yaml
agents/idea-digger/: agent.yaml
agents/market-analyst/: README.md  agent.yaml
agents/market-analyst/system/: README.md  main.py  news_server.py  pyproject.toml  start.bat  start.sh  stop.sh
agents/minimal/: agent.yaml
agents/python-tutor/: agent.yaml
agents/technical/: agent.yaml
deployment/: README.md  discord-ai-bot@.service
discord_ai_agent/: __init__.py  agent_loader.py  agent_registry.py  claude_cli_finder.py  cli.py  commands.py  discord_bot.py  file_manager.py  message_queue.py  multi_bot.py  session_adapter.py
discord_ai_agent/database/: __init__.py  models.py  session_store.py
docs/: AGENT_PROFILES.md  PERMISSIONS.md  PROCESS_DISPLAY.md  SPECIALIZED_AGENTS.md  agent-workspace-config.md  library-usage.md
examples/: bots.yaml  custom_bot.py  simple_bot.py
src/: __init__.py  discord_bot.py  file_manager.py  rate_limit.py
