[project]
name = "discord-ai-agent"
version = "3.0.0"
description = "Discord AI Agent Bot powered by Claude Agent SDK"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1.19",
    "discord-py>=2.6.4",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
